# EQuIPS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindGUROBI.cmake
include/: BoundsManager.h  DataStructures.h  ExpansionTree.h  Helper.h  Moves.h  MultiGame.h  Parser.h  Solver.h  VarInfo.h
instances/: MiniLotSizing.qlp  MiniMCN.qlp  QRandomParity_1000.qlp  Test_feas.lp  Test_infeas.lp
src/: ExpansionTree.cpp  Moves.cpp  MultiGame.cpp  Parser.cpp  Solver.cpp  VarInfo.cpp  main.cpp
